--- a/coffee_shop/coffee_shop.csproj
+++ b/coffee_shop/coffee_shop.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Allstocks.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Allstocks.Designer.cs">
+      <DependentUpon>Allstocks.cs</DependentUpon>
+    </Compile>
     <Compile Include="all_users.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -68,6 +74,18 @@
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
     <Compile Include="MyInter.cs" />
+    <Compile Include="newstockcate.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="newstockcate.Designer.cs">
+      <DependentUpon>newstockcate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Newstocks.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Newstocks.Designer.cs">
+      <DependentUpon>Newstocks.cs</DependentUpon>
+    </Compile>
     <Compile Include="new_user.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -76,7 +94,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Stock_Category.cs" />
     <Compile Include="Users.cs" />
+    <EmbeddedResource Include="Allstocks.resx">
+      <DependentUpon>Allstocks.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="all_users.resx">
       <DependentUpon>all_users.cs</DependentUpon>
     </EmbeddedResource>
@@ -85,6 +107,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="newstockcate.resx">
+      <DependentUpon>newstockcate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Newstocks.resx">
+      <DependentUpon>Newstocks.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="new_user.resx">
       <DependentUpon>new_user.cs</DependentUpon>
