--- a/coffee_shop/coffee_shop.csproj
+++ b/coffee_shop/coffee_shop.csproj
@@ -46,12 +46,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="all_company.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="all_company.Designer.cs">
+      <DependentUpon>all_company.cs</DependentUpon>
+    </Compile>
     <Compile Include="all_users.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="all_users.Designer.cs">
       <DependentUpon>all_users.cs</DependentUpon>
     </Compile>
+    <Compile Include="Company.cs" />
     <Compile Include="DataConn.cs" />
     <Compile Include="Db_Insert.cs" />
     <Compile Include="Form1.cs">
@@ -68,6 +75,12 @@
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
     <Compile Include="MyInter.cs" />
+    <Compile Include="new_company.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="new_company.Designer.cs">
+      <DependentUpon>new_company.cs</DependentUpon>
+    </Compile>
     <Compile Include="new_user.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -77,6 +90,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Users.cs" />
+    <EmbeddedResource Include="all_company.resx">
+      <DependentUpon>all_company.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="all_users.resx">
       <DependentUpon>all_users.cs</DependentUpon>
     </EmbeddedResource>
@@ -85,6 +101,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="new_company.resx">
+      <DependentUpon>new_company.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="new_user.resx">
       <DependentUpon>new_user.cs</DependentUpon>
