--- a/coffee_shop/coffee_shop.csproj
+++ b/coffee_shop/coffee_shop.csproj
@@ -59,6 +59,12 @@
       <DependentUpon>all_users.cs</DependentUpon>
     </Compile>
     <Compile Include="Company.cs" />
+    <Compile Include="company_form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="company_form.Designer.cs">
+      <DependentUpon>company_form.cs</DependentUpon>
+    </Compile>
     <Compile Include="DataConn.cs" />
     <Compile Include="Db_Insert.cs" />
     <Compile Include="Form1.cs">
@@ -95,6 +101,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="all_users.resx">
       <DependentUpon>all_users.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="company_form.resx">
+      <DependentUpon>company_form.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
