--- a/coffee_shop/coffee_shop.csproj
+++ b/coffee_shop/coffee_shop.csproj
@@ -58,6 +58,12 @@
     <Compile Include="all_users.Designer.cs">
       <DependentUpon>all_users.cs</DependentUpon>
     </Compile>
+    <Compile Include="change_password.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="change_password.Designer.cs">
+      <DependentUpon>change_password.cs</DependentUpon>
+    </Compile>
     <Compile Include="Company.cs" />
     <Compile Include="company_form.cs">
       <SubType>Form</SubType>
@@ -102,6 +108,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="all_users.resx">
       <DependentUpon>all_users.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="change_password.resx">
+      <DependentUpon>change_password.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="company_form.resx">
       <DependentUpon>company_form.cs</DependentUpon>
