--- a/coffee_shop/coffee_shop.csproj
+++ b/coffee_shop/coffee_shop.csproj
@@ -88,6 +88,7 @@
     </Compile>
     <Compile Include="MyInter.cs" />
     <Compile Include="ProductCategory.cs" />
+    <Compile Include="Products.cs" />
     <Compile Include="products_form.cs">
       <SubType>Form</SubType>
     </Compile>
