--- a/coffee_shop/coffee_shop.csproj
+++ b/coffee_shop/coffee_shop.csproj
@@ -101,6 +101,14 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Stock.cs" />
+    <Compile Include="StockCategory.cs" />
+    <Compile Include="stock_form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="stock_form.Designer.cs">
+      <DependentUpon>stock_form.cs</DependentUpon>
+    </Compile>
     <Compile Include="StringCapitalize.cs" />
     <Compile Include="Users.cs" />
     <Compile Include="users_form.cs">
@@ -139,6 +147,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="stock_form.resx">
+      <DependentUpon>stock_form.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="users_form.resx">
       <DependentUpon>users_form.cs</DependentUpon>
     </EmbeddedResource>
