--- a/coffee_shop/coffee_shop.csproj
+++ b/coffee_shop/coffee_shop.csproj
@@ -54,6 +54,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Employees.cs" />
+    <Compile Include="employees_form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="employees_form.Designer.cs">
+      <DependentUpon>employees_form.cs</DependentUpon>
+    </Compile>
     <Compile Include="product_category_form.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -141,6 +148,9 @@
     <Compile Include="users_form.Designer.cs">
       <DependentUpon>users_form.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="employees_form.resx">
+      <DependentUpon>employees_form.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="product_category_form.resx">
       <DependentUpon>product_category_form.cs</DependentUpon>
     </EmbeddedResource>
