--- a/coffee_shop/coffee_shop.csproj
+++ b/coffee_shop/coffee_shop.csproj
@@ -73,6 +73,12 @@
     <Compile Include="employees_form.Designer.cs">
       <DependentUpon>employees_form.cs</DependentUpon>
     </Compile>
+    <Compile Include="Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Login.designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
+    </Compile>
     <Compile Include="Mainsa_Form.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -122,12 +128,6 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="HashCode.cs" />
-    <Compile Include="Login.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Login.Designer.cs">
-      <DependentUpon>Login.cs</DependentUpon>
-    </Compile>
     <Compile Include="MyInter.cs" />
     <Compile Include="ProductCategory.cs" />
     <Compile Include="Products.cs" />
@@ -200,6 +200,9 @@
     <EmbeddedResource Include="employees_form.resx">
       <DependentUpon>employees_form.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Mainsa_Form.resx">
       <DependentUpon>Mainsa_Form.cs</DependentUpon>
     </EmbeddedResource>
@@ -220,9 +223,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Login.resx">
-      <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="products_form.resx">
       <DependentUpon>products_form.cs</DependentUpon>
